--- a/styles/layout.less
+++ b/styles/layout.less
@@ -8,7 +8,6 @@ html, body {
   color: #484848;
 }
 
-
 #header {
   background-color: #005782;
   border-radius: 0;
@@ -22,17 +21,8 @@ html, body {
 }
 
 #header .navbar-nav li > a {
-  color: #fff;
   font-weight: bold;
   font-size: 12px;
-}
-
-#header .navbar-nav li.active > a {
-  background: none;
-}
-
-#header .navbar-nav li > a:hover {
-  background: none;
 }
 
 #header .navbar-nav.menu li > a {
@@ -40,11 +30,13 @@ html, body {
   padding-left: 5px;
   span {
     padding: 10px;
+    color: #fff;
   }
 }
 
-#header .navbar-nav li.user a {
+#header .navbar-nav li.user > a {
   padding-left: 5px;
+  color: #fff;
   img {
     border-radius: 3px;
     margin-right: 5px;
@@ -67,17 +59,23 @@ html, body {
 .navbar-nav .glyphicon {
   font-size: 16px;
   top: 6px;
+  color: #fff;
 }
 
 .navbar-nav li .menu-label {
   display: none;
 }
 
-#header li.notifications a {
+#header li.notifications > a {
   padding-right: 5px;
 }
 
-#header li.user a {
+#header .menu li a:hover,
+#header li.notifications a.dropdown-toggle:hover,
+#header li.notifications.open a.dropdown-toggle:hover,
+#header li.user .dropdown-toggle:hover,
+#header li.use.open .dropdown-toggle {
+  background: none;
 }
 
 #header .search .form-group {
@@ -181,11 +179,16 @@ html, body {
     text-shadow: none;
   }
 }
-
+.row {
+  height: 100%;
+}
 .inbox {
   clear: both;
+  padding-left: 20px;
+  list-style: none;
   height: 100%;
   overflow: auto;
+  position: relative;
   margin-top: 5px;
   padding-top: 10px;
   background-color: #fff;
